--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-progress": "5.0.1",
+    "react-native-web": "0.19.12"
   },
   "private": true
 }
