--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "progressbarlabactivity9",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "./",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo export --platform web",
+    "build-web": "expo export --platform web --output-dir dist"
   },
   "dependencies": {
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-progress": "5.0.1",
     "react-native-web": "0.19.12"
